--- a/src/SCSS/global.scss
+++ b/src/SCSS/global.scss
@@ -2,9 +2,16 @@
 * {
   box-sizing: border-box;
   font-size: 62.5%;
+  font-family: $mainFont;
+}
+table,
+tr,
+th,
+td {
+  font-family: $mainFont;
 }
 h1 {
-  font: $titleFont;
+  font-family: $titleFont;
   font-size: 5rem;
   text-align: center;
   padding: $lh 0;
