--- a/src/SCSS/variables.scss
+++ b/src/SCSS/variables.scss
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 
 // Font
 $titleFont: 'Alfa Slab One', cursive;
+$mainFont: 'Poppins', sans-serif;
 
-$lh: 30px;
+// Line height
+$lh: 25px;
