--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -1,10 +1,15 @@
 @import 'SCSS/variables.scss';
 
+.App {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
 .logout {
   width: 100%;
   height: 1.5 * $lh;
   margin: $lh / 4 0;
   font-size: 1.2rem;
-  position: absolute;
+  position: relative;
   bottom: 0px;
 }
