--- a/src/SCSS/form.scss
+++ b/src/SCSS/form.scss
@@ -5,6 +5,13 @@ form.standard {
   flex-direction: column;
   align-items: center;
   padding: 0 15px;
+  padding-top: $lh;
+
+  // @media #{$tablet} {
+  //   border-width: 0px 2px 2px;
+  //   border-style: solid;
+  //   border-color: black;
+  // }
 
   div {
     width: 100%;
@@ -31,9 +38,10 @@ form.standard {
   button {
     font-size: 1.2rem;
     line-height: $lh;
-    margin: $lh/2 0;
+    margin: $lh/2 0 $lh * 1.5;
     border-radius: 20px;
     padding: 0 15px;
     width: 200px;
+    cursor: pointer;
   }
 }
