--- a/src/SCSS/form.scss
+++ b/src/SCSS/form.scss
@@ -1,4 +1,5 @@
 @import './variables.scss';
+@import './mixins.scss';
 
 form.standard {
   display: flex;
@@ -39,11 +40,7 @@ form.standard {
     }
 
     input {
-      margin: 0 auto;
-      width: 90%;
-      height: 2 * $lh;
-      padding: 0 10px;
-      font-size: 1.2rem;
+      @include Input;
     }
   }
 
@@ -54,13 +51,7 @@ form.standard {
       margin: auto;
     }
     button {
-      font-size: 1.2rem;
-      line-height: $lh;
-      // margin: $lh/2 0 $lh * 1.5;
-      border-radius: 20px;
-      padding: 0 15px;
-      width: 200px;
-      cursor: pointer;
+      @include Button;
     }
   }
 }
