--- a/src/SCSS/form.scss
+++ b/src/SCSS/form.scss
@@ -10,6 +10,7 @@ form.standard {
     width: 100%;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     padding: $lh/2 0;
 
     label {
