Adds styles for left and right arrows

--- a/src/SCSS/errorText.scss
+++ b/src/SCSS/errorText.scss
@@ -1,9 +1,9 @@
 @import './variables.scss';
 
 p.error {
-  color: red;
   font-size: 1.2rem;
   line-height: $lh;
   min-height: $lh;
   text-align: center;
+  margin: $lh / 2 0;
 }
