--- a/src/components/UI/ArrowButton/styles.module.scss
+++ b/src/components/UI/ArrowButton/styles.module.scss
@@ -1,95 +1,79 @@
 @import 'SCSS/variables.scss';
 @import 'SCSS/mixins.scss';
 
-div.container {
+div.arrowContainer {
   position: relative;
   height: 0;
+}
 
-  animation-timing-function: ease-in;
-  -webkit-transition: all 1.5s;
-  transition: all 1.5s;
-  animation-direction: alternate;
+.switchCircle {
+  position: absolute;
+
+  padding: 0;
+  width: 97px;
+  height: 97px;
+  bottom: -49px;
+
+  border-style: solid;
+  border-radius: 50%;
+  // border-width: 1px;
+}
+
+.blocker {
+  position: absolute;
+
+  padding: 0;
+  width: 85px;
+  height: 23px;
+  z-index: 5;
+}
+
+.arrowButton {
+  $aniTime: 0.5s;
+
+  position: relative;
+  width: 200px;
+  border-radius: 40px;
+  z-index: 0;
 
   &:hover {
-    transform: translate(20px);
-    transition: all 1.5s;
-    -webkit-transition: all 1.5s;
+    button {
+      // padding-left: 20px;
+      transition: all $aniTime;
+      -webkit-transition: all $aniTime;
+    }
+    div {
+      transform: translateX(20px);
+      transition: all $aniTime;
+      -webkit-transition: all $aniTime;
+    }
   }
 
-  .switchCircle {
-    position: absolute;
+  button {
+    @include Button;
+    max-width: 225px;
+    border-radius: 0;
 
-    padding: 0;
-    width: 97px;
-    height: 97px;
-    bottom: -49px;
-
-    border-width: 1px;
-    border-style: solid;
-    z-index: 4;
-    border-radius: 50%;
+    animation-timing-function: ease-in;
+    -webkit-transition: all $aniTime;
+    transition: all $aniTime;
+    padding-right: 15px;
   }
-
-  .blocker {
-    position: absolute;
-
-    padding: 0;
-    width: 85px;
-    height: 23px;
-    z-index: 5;
-  }
-}
-.arrowButton {
-  @include Button;
-  border-radius: 40px;
-  position: relative;
-
-  z-index: 0;
 
   div {
     position: absolute;
     border-style: solid;
 
     &.arrowHead {
-      position: relative;
-      bottom: -1px;
+      width: 37.4767px;
+      height: 37.4767px;
       padding: 0;
+      border-width: 1px 1px 0 0;
 
-      div:first-child {
-        padding: 0;
-        width: 20px;
-        height: 52px;
-        bottom: -13px;
+      transform: rotate(45deg);
 
-        z-index: 3;
-        border-style: solid;
-        border-width: 1px 0;
-      }
-
-      div:nth-child(2) {
-        width: 37.4767px;
-        height: 37.4767px;
-        padding: 0;
-        left: 83px;
-        bottom: -6px;
-        border-width: 1px 1px 0 0;
-
-        transform: rotate(45deg);
-
-        z-index: 2;
-        border-style: solid;
-      }
-
-      div:last-child {
-        padding: 0;
-        width: 20px;
-        height: 52px;
-
-        left: 85px;
-        bottom: -13px;
-
-        z-index: 1;
-      }
+      z-index: 2;
+      border-style: solid;
     }
   }
 }
