--- a/src/SCSS/form.scss
+++ b/src/SCSS/form.scss
@@ -36,6 +36,7 @@ form.standard {
     display: flex;
     flex-direction: column;
     min-height: 250px;
+    width: 470px;
 
     p {
       text-align: center;
