--- a/src/components/UI/Prompt/styles.module.scss
+++ b/src/components/UI/Prompt/styles.module.scss
@@ -2,15 +2,17 @@
 
 .shadow {
   position: absolute;
+  z-index: 2;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vh;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.2);
 }
 
 .content {
   position: absolute;
+  z-index: 5;
   background-color: white;
   top: 30%;
   left: 0;
