Updates base styles to remove absolute issues

--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -3,7 +3,10 @@
 .App {
   max-width: 500px;
   margin: 0 auto;
-  position: relative;
+
+  @media #{$min} {
+    max-width: 340px;
+  }
 }
 
 .logout {
