--- a/src/components/UI/Prompt/styles.module.scss
+++ b/src/components/UI/Prompt/styles.module.scss
@@ -5,12 +5,13 @@
   z-index: 2;
   top: 0;
   left: 0;
-  width: 100vh;
+  width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.2);
 }
 
 .content {
+  max-width: 450px;
   position: absolute;
   z-index: 5;
   background-color: white;
@@ -19,7 +20,6 @@
   right: 0;
   margin: 0 auto;
   border-radius: 20px;
-  max-width: 90%;
   padding: 10px;
 
   p {
