--- a/src/components/protected/GameSelect/Table/styles.module.scss
+++ b/src/components/protected/GameSelect/Table/styles.module.scss
@@ -11,8 +11,8 @@
     border-width: 0 0 2px;
     border-style: solid;
   }
+
   tr {
-    // height: 100%;
     display: flex;
     align-items: center;
     height: $lh * 2;
@@ -28,6 +28,21 @@
         }
         &:nth-child(n + 2) {
           width: 25%;
+        }
+      }
+    }
+
+    &.noGames {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 313px;
+      margin: 0px;
+
+      td {
+        padding: $lh / 2 0;
+        p {
+          text-align: center;
         }
       }
     }
@@ -69,8 +84,4 @@
       cursor: pointer;
     }
   }
-}
-
-.noGames {
-  padding: $lh / 2 0;
 }
