--- a/src/SCSS/form.scss
+++ b/src/SCSS/form.scss
@@ -11,6 +11,16 @@ form.standard {
     justify-content: space-around;
     align-items: center;
 
+    &.buttons {
+      @media #{$min} {
+        max-width: 310px;
+
+        button {
+          max-width: 340px;
+        }
+      }
+    }
+
     &.fContainer {
       width: 100%;
       padding: $lh/2 0;
@@ -46,7 +56,7 @@ form.standard {
     }
 
     @media #{$min} {
-      width: 310px;
+      max-width: 310px;
     }
 
     p {
@@ -71,6 +81,10 @@ form.standard {
       @include Button;
       max-width: none;
       border-radius: 0;
+
+      @media #{$min} {
+        width: 90%;
+      }
     }
   }
 }
