--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -7,6 +7,13 @@
   @media #{$min} {
     max-width: 340px;
   }
+
+  h1 {
+    @media #{$smHeight} {
+      font-size: 3.5rem;
+      padding: $lh/2 0;
+    }
+  }
 }
 
 .logout {
