--- a/src/components/protected/Game/styles.module.scss
+++ b/src/components/protected/Game/styles.module.scss
@@ -1,7 +1,7 @@
 @import 'SCSS/errorText.scss';
 
 .Game {
-  padding: $lh 10px 0;
+  padding: 0 10px 0;
   min-height: 500px;
   max-width: 400px;
   height: 100vh;
@@ -11,7 +11,18 @@
   justify-content: flex-start;
 }
 
-.stats {
+p.toLobby {
+  line-height: $lh;
+  cursor: pointer;
+  margin-bottom: $lh/2;
+
+  border-radius: 0 0 7px 7px;
+  border-style: solid;
+  border-width: 0 1px 1px;
+  padding: $lh/2 10px;
+}
+
+table.menu {
   width: 100%;
   padding: $lh / 2;
   td,
@@ -19,10 +30,34 @@
     width: 25%;
     text-align: center;
     padding: 5px;
+
+    &:first-child {
+      width: 50%;
+    }
   }
-  //   padding: $lh;
-  //   display: flex;
-  //   justify-content: space-between;
+}
+
+div.players {
+  display: flex;
+  overflow: hidden;
+  margin: $lh 0px $lh/2;
+
+  p.label {
+    margin-right: 5px;
+  }
+
+  div {
+    display: flex;
+  }
+
+  p {
+    font-size: 0.8rem;
+    line-height: $lh/2;
+  }
+
+  span {
+    margin-right: 5px;
+  }
 }
 
 .dice {
@@ -69,7 +104,7 @@ table.score {
   width: 100%;
   text-align: center;
   border-collapse: collapse;
-  margin: $lh 0 0;
+  margin: 0;
 
   th,
   td {
@@ -105,12 +140,4 @@ table.score {
       width: 20px;
     }
   }
-}
-
-td.selected {
-  background-color: rgba(yellow, 1);
-  color: black;
-}
-td.scoreCell {
-  background-color: rgba(yellow, 0.2);
 }
