--- a/src/components/UI/Prompt/styles.module.scss
+++ b/src/components/UI/Prompt/styles.module.scss
@@ -7,20 +7,18 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .content {
   max-width: 450px;
   position: absolute;
   z-index: 5;
-  background-color: white;
   top: 30%;
   left: 0;
   right: 0;
   margin: 0 auto;
   border-radius: 20px;
-  padding: 10px;
+  padding: $lh/2;
 
   p {
     text-align: center;
