--- a/src/components/protected/Game/styles.module.scss
+++ b/src/components/protected/Game/styles.module.scss
@@ -11,15 +11,22 @@
   justify-content: flex-start;
 }
 
-p.toLobby {
+.controls {
   line-height: $lh;
-  cursor: pointer;
   margin-bottom: $lh/2;
 
   border-radius: 0 0 7px 7px;
   border-style: solid;
   border-width: 0 1px 1px;
   padding: $lh/2 10px;
+
+  display: flex;
+  justify-content: space-evenly;
+
+  svg {
+    font-size: 2rem;
+    cursor: pointer;
+  }
 }
 
 table.menu {
