--- a/src/components/protected/Game/styles.module.scss
+++ b/src/components/protected/Game/styles.module.scss
@@ -11,6 +11,14 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+
+  h2 {
+    margin: 0 auto;
+    width: 80%;
+
+    font-size: 1.5rem;
+    text-align: center;
+  }
 }
 
 .controls {
