Updates text to icons

--- a/src/components/protected/Game/styles.module.scss
+++ b/src/components/protected/Game/styles.module.scss
@@ -1,6 +1,6 @@
-@import 'SCSS/variables.scss';
-@import 'SCSS/mixins.scss';
-@import 'SCSS/errorText.scss';
+@import "SCSS/variables.scss";
+@import "SCSS/mixins.scss";
+@import "SCSS/errorText.scss";
 
 .Game {
   padding: 0 10px 0;
