--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -81,18 +81,13 @@
       margin: auto;
     }
 
-    button.primary {
+    button {
       @include Button;
-      max-width: none;
       border-radius: 0;
 
       &.disabled {
         opacity: 0.5;
         pointer-events: none;
-      }
-
-      @media #{$min} {
-        width: 90%;
       }
     }
   }
