--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,6 +4,7 @@
 .header {
   width: 100%;
   margin-bottom: $lh * 2;
+  box-shadow: 0px 4px 10px -7px var(--secondary);
 
   & > div {
     max-width: 1500px;
