Adds RGB color values for default color & removes pointer events from disabled items

--- a/src/SCSS/variables.scss
+++ b/src/SCSS/variables.scss
@@ -4,11 +4,17 @@
 
 :root {
   --primary: #191919;
+  --primary-rgb: 25, 25, 25;
   --secondary: #e3e2e2;
+  --secondary-rgb: 227, 226, 226;
   --highlight: #e5adaa;
+  --highlight-rgb: 229, 173;
   --accent: #474714;
+  --accent-rgb: 71, 71, 20;
   --brightAccent: #ffff00;
+  --brightAccent-rgb: 225, 255, 0;
   --error: #e5adaa;
+  --error-rgb: 229, 173, 170;
 }
 
 .primary {
@@ -37,6 +43,7 @@
 
 .disabled {
   opacity: 0.5;
+  pointer-events: none;
 }
 
 button.disabled {
