--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -1,6 +1,8 @@
 @import "SCSS/variables.scss";
 
-.App {
+.appBodyWrapper {
+  min-width: $appMinWidth;
+  max-width: $appMaxWidth;
   margin: 0 auto;
 }
 
