--- a/src/SCSS/global.scss
+++ b/src/SCSS/global.scss
@@ -7,12 +7,9 @@
 }
 
 body {
-  min-width: 360px;
-  max-width: 800px;
-  margin: 0 auto;
-
   background-color: var(--primary);
   height: 100vh;
+  width: 100vw;
   transition: background-color 0.5s, color 0.5s, border-color 0.5s;
 }
 
