--- a/src/components/PlayerList/PlayerList.module.scss
+++ b/src/components/PlayerList/PlayerList.module.scss
@@ -1,7 +1,8 @@
 @import "SCSS/variables.scss";
 @import "SCSS/mixins.scss";
 
-div.players {
+div.players,
+div.playersMobile {
   overflow: hidden;
   overflow-y: auto;
   max-height: 480px;
@@ -10,42 +11,22 @@ div.players {
   min-width: 200px;
 
   background-color: rgba(var(--primary-rgb), 0.9);
+  border: 1px solid var(--secondary);
   border-radius: 10px 0 0 10px;
   margin-right: $lh;
 
-  p.label {
-    text-align: center;
-  }
-}
-
-div.playersMobile {
-  display: flex;
-  flex-wrap: wrap;
-  overflow: hidden;
-  margin-bottom: $lh;
-  line-height: 2 * $lh;
-  margin-top: 2 * $lh;
-}
-
-.players,
-.playersMobile {
-  border: 1px solid var(--secondary);
-
-  p.label {
-    margin-right: 5px;
-    max-height: $lh * 3;
-  }
-
-  div {
-    display: flex;
-  }
-
   p {
-    font-size: 0.8rem;
-    line-height: $lh * 2.5;
-    cursor: pointer;
     padding: 0 $lh;
     margin: 0;
+    line-height: $lh * 2.5;
+    font-size: 0.8rem;
+    cursor: pointer;
+
+    &.label {
+      margin: 5px;
+      max-height: $lh * 3;
+      text-align: center;
+    }
 
     &.viewing {
       background-color: rgba(var(--secondary-rgb), 0.2);
@@ -63,15 +44,7 @@ div.playersMobile {
   }
 }
 
-.flex {
-  display: flex;
-}
-
-.flexColumn {
-  display: flex;
-  flex-direction: column;
-}
-
-.noFlex {
-  display: initial;
+div.playersMobile {
+  border-radius: 10px;
+  margin: $lh auto 0;
 }
