--- a/src/containers/Game/Game.module.scss
+++ b/src/containers/Game/Game.module.scss
@@ -55,99 +55,6 @@
   }
 }
 
-div.score {
-  width: 100%;
-  max-width: 400px;
-  text-align: center;
-  border-collapse: collapse;
-  margin: 0 auto;
-
-  .header {
-    display: flex;
-    margin-bottom: $lh;
-
-    p {
-      border-style: solid;
-      border-width: 0 0 1px;
-
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      font-size: 0.9rem;
-      font-weight: 800;
-      padding: $lh 0;
-
-      &:nth-child(1),
-      &:nth-child(3) {
-        width: 35%;
-        max-width: 100px;
-        min-width: 85px;
-      }
-
-      &:nth-child(2),
-      &:nth-child(4) {
-        width: 100%;
-        max-width: 100px;
-      }
-    }
-  }
-
-  .row {
-    display: flex;
-
-    p {
-      border-style: solid;
-
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      min-width: 32px;
-      line-height: $lh * 2;
-      margin: $lh/2 0;
-
-      &:nth-child(1),
-      &:nth-child(3) {
-        font-size: 0.7rem;
-        width: 35%;
-        min-width: 85px;
-        max-width: 100px;
-      }
-
-      &:nth-child(2),
-      &:nth-child(4) {
-        width: 100%;
-        max-width: 100px;
-      }
-    }
-  }
-
-  .footer {
-    display: flex;
-
-    div {
-      width: 50%;
-    }
-
-    p:first-of-type {
-      padding: 5px;
-      font-size: 1rem;
-      width: 35%;
-      text-align: center;
-      line-height: $lh;
-    }
-
-    p:nth-of-type(2) {
-      padding: 5px;
-      font-size: 1rem;
-      width: 15%;
-      text-align: center;
-      line-height: $lh;
-    }
-  }
-}
-
 .backToLobby {
   display: block;
   text-align: center;
@@ -163,29 +70,6 @@ div.score {
   line-break: anywhere;
 }
 
-.title {
-  display: flex;
-  justify-content: space-between;
-
-  align-items: center;
-  width: 100%;
-  margin: 0 auto $lh;
-
-  & > h2 {
-    font-size: 1.5rem;
-    text-align: center;
-    margin-right: 15px;
-    width: fit-content;
-  }
-
-  .buttonGroup {
-    & > svg {
-      font-size: 1.5rem;
-      cursor: pointer;
-    }
-  }
-}
-
 .tableWrapper {
   width: 100%;
   min-height: 480px;
@@ -193,4 +77,8 @@ div.score {
   background-color: rgba(var(--primary-rgb), 0.9);
   border: 1px solid var(--secondary);
   border-radius: 0 10px 10px 0;
+}
+
+.mobileTableWrapper {
+  border-radius: 0 0 10px 10px;
 }
