--- a/src/components/Die/Die.module.scss
+++ b/src/components/Die/Die.module.scss
@@ -6,18 +6,27 @@
   height: fit-content;
   display: flex;
 
-  &.small > img {
-    height: 20px;
-    width: 20px;
+  &.small {
+    & > img,
+    & > svg {
+      height: 20px;
+      width: 20px;
+    }
   }
 
-  &.medium > img {
-    height: 60px;
-    width: 60px;
+  &.medium {
+    & > img,
+    & > svg {
+      height: 60px;
+      width: 60px;
+    }
   }
 
-  &.large > img {
-    height: 80px;
-    width: 80px;
+  &.large {
+    & > img,
+    & > svg {
+      height: 80px;
+      width: 80px;
+    }
   }
 }
