--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -11,7 +11,6 @@
   h2 {
     margin: 0 auto;
     font-size: 2rem;
-    line-height: $lh * 2;
     font-family: $mainFont;
     margin-bottom: $lh * 2;
   }
@@ -52,6 +51,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     width: 470px;
 
     p:first-of-type {
