--- a/src/components/GameTitle/GameTitle.module.scss
+++ b/src/components/GameTitle/GameTitle.module.scss
@@ -6,7 +6,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  margin: $lh * 2 auto $lh;
+  margin: 0 auto $lh;
 
   & > h2 {
     font-size: 1.5rem;
