--- a/src/components/Prompt/Prompt.module.scss
+++ b/src/components/Prompt/Prompt.module.scss
@@ -9,16 +9,15 @@
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.8);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.content {
+.contentWrapper {
   max-width: 450px;
-  position: absolute;
-  z-index: 5;
-  top: 30%;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
+  min-width: 360px;
   border-radius: 20px;
   padding: $lh * 2;
 
@@ -26,7 +25,6 @@
     text-align: center;
     line-height: $lh * 3;
     font-size: 1.5rem;
-    margin-bottom: $lh * 2;
     color: black;
 
     & > * {
@@ -37,7 +35,6 @@
 
   div:last-of-type {
     display: flex;
-    justify-content: space-between;
 
     button {
       @include Button(var(--primary));
@@ -54,4 +51,8 @@
       }
     }
   }
+}
+
+.content {
+  color: var(--primary);
 }
