--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -61,3 +61,15 @@
     }
   }
 }
+
+.wifi {
+  position: relative;
+  height: 0;
+  width: 0;
+
+  & > * {
+    position: absolute;
+    top: 55px;
+    right: 20px;
+  }
+}
