--- a/src/components/PlayerList/PlayerList.module.scss
+++ b/src/components/PlayerList/PlayerList.module.scss
@@ -44,6 +44,17 @@ div.playersMobile {
   }
 }
 
+.player {
+  display: flex;
+  align-items: center;
+
+  svg {
+    font-size: 1.2rem;
+    color: yellow;
+    margin-right: 5px;
+  }
+}
+
 div.playersMobile {
   border-radius: 10px;
   margin: $lh auto 0;
